# Hush

./: .gitignore  Cargo.toml  README.md  build.rs  tailwind.config.js
public/: output.css
public/css/: output.css
public/js/: signup.js
src/: lib.rs  main.rs  routes.rs
src/handlers/: auth.rs  mod.rs  static_pages.rs
src/models/: mod.rs  user.rs
templates/: index.html  login.html  signup.html
templates/components/: navbar.html
