[package]
name = "Hush"
version = "0.0.1"
edition = "2024"
resolver = "3"
build = "build.rs"

[profile.dev]
debug = true

[dependencies]
actix-files = "0.6.9"
actix-web = "4.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tera = "1.20.1"
validator = { version = "0.20.0", features = ["derive"] }
